Fixing navbar on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -420,7 +420,7 @@ body .contact .form form .form-group.send .btn:focus {
     line-height: 3;
     border-bottom-right-radius: 100%;
     border-bottom-left-radius: 100%;
-    transition: all 650ms cubic-bezier(1, 0, 0, 1);
+    transition: all 850ms cubic-bezier(1, 0, 0, 1);
   }
   body header .navbar.open {
     top: 0;
