--- a/scss/partials/_media.scss
+++ b/scss/partials/_media.scss
@@ -35,7 +35,7 @@
         line-height: 3;
         border-bottom-right-radius: 100%;
         border-bottom-left-radius: 100%;
-        transition: all 650ms cubic-bezier(1, 0, 0, 1);
+        transition: all 850ms cubic-bezier(1, 0, 0, 1);
 
         &.open {
           top: 0;
